--- a/app/src/main/res/layout/fragment_received.xml
+++ b/app/src/main/res/layout/fragment_received.xml
@@ -138,11 +138,12 @@
         <Spinner
             android:id="@+id/spinnerBelongsToBc"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_box_dark"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:spinnerMode="dropdown"
             android:visibility="gone" />
 
         <!-- Belongs to EMI (shown only when EMI category selected) -->
@@ -160,11 +161,12 @@
         <Spinner
             android:id="@+id/spinnerBelongsToEmi"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/rounded_box_dark"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:spinnerMode="dropdown"
             android:visibility="gone" />
 
         <Button
